--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </p>
         
         <p>
-            Previously, I was a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised<a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
-            My PhD research focused on developing algorithms for machine learning, mainly focused on semi-supervised learning, curriculum learning, multitask learning, and graph-based problems.
+            Previously, I was a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
+            My Master's research focused on developing Deep Learning models to generate view synthasis algorithms for machine learning, mainly focused on semi-supervised learning, curriculum learning, multitask learning, and graph-based problems.
             I am also passionate about applying machine learning methods in neuroscience, in order to study how the brain understands language and controls speech.
             Previously, I did some research in Computer Vision, with the goal of detecting and tracking objects in videos.
         </p>
