--- a/cv/index.html
+++ b/cv/index.html
@@ -87,7 +87,7 @@
   <!-- Scrolling Progress Bar -->
   <progress id="progress" value="0">
     <div class="progress-container">
-      <span class="progress-bar"></span>
+      <span class="progress-bar">hi</span>
     </div>
   </progress>
 
