--- a/cv/index.html
+++ b/cv/index.html
@@ -152,7 +152,7 @@
 			</div>
 		</div>
 	
-		<div class="card mt-3 p-3">
+		<div class="card mt-3 p-3 light-blue">
 			<h3 class="card-title">Education</h3>
 			<div>
 			
