--- a/cv/index.html
+++ b/cv/index.html
@@ -153,7 +153,7 @@
 		</div>
 	
 		<div class="card mt-3 p-3">
-			<h3 class="card-title">Education Test4</h3>
+			<h3 class="card-title">Education</h3>
 			<div>
 			
 				<ul class="card-text font-weight-light list-group list-group-flush">
