--- a/projects/index.html
+++ b/projects/index.html
@@ -142,10 +142,10 @@
 
   </div>
 
-  <!-- Footer -->
+  <!-- Footer 
   <footer>
     &copy; Copyright 2021 Otilia Stretcu.
-    
+    -->
     
   </footer>
 
