--- a/publications/index.html
+++ b/publications/index.html
@@ -1789,10 +1789,10 @@
 
   </div>
 
-  <!-- Footer -->
+  <!-- Footer 
   <footer>
     &copy; Copyright 2021 Otilia Stretcu.
-    
+    -->
     
   </footer>
 
