--- a/teaching/index.html
+++ b/teaching/index.html
@@ -162,10 +162,10 @@
 
   </div>
 
-  <!-- Footer -->
+  <!-- Footer
   <footer>
     &copy; Copyright 2021 Otilia Stretcu.
-    
+     -->
     
   </footer>
 
