--- a/cv/index.html
+++ b/cv/index.html
@@ -1439,12 +1439,13 @@
 
   </div>
 
-  <!-- Footer -->
+  <!-- Footer 
   <footer>
     &copy; Copyright 2021 Otilia Stretcu.
     
     
   </footer>
+  -->
 
   <!-- Core JavaScript Files -->
   <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
