--- a/index.html
+++ b/index.html
@@ -121,21 +121,19 @@
         </div>
 
         <p>
-            I am a Research Assistant at <a href="https://www.yorku.ca/" target="_blank">York University</a> in Toronto, Canada, working on Deep Learning models with applications in Computer Vision.
+            I am a Research Assistant at <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> in Toronto, Canada, working on Deep Learning models with applications in Computer Vision.
         </p>
         
         <p>
-            Previously, I was a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
-            My Master's research focused on developing Deep Learning models to generate view synthasis algorithms for machine learning, mainly focused on semi-supervised learning, curriculum learning, multitask learning, and graph-based problems.
-            I am also passionate about applying machine learning methods in neuroscience, in order to study how the brain understands language and controls speech.
-            Previously, I did some research in Computer Vision, with the goal of detecting and tracking objects in videos.
+            I am also a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
+            My Master's research focused on developing Deep Learning models to generate novel face images from different views. My research also consists of Computer Vision/Graphic applications in Deep Learning. Previously I have done model/color recognition in my undergrad as my thesis project.
         </p>
     </div>
 </div>
 
 <div class="col text-justify p-0">
     <p>
-        Before I joined CMU, I graduated with an <a href="https://www.cst.cam.ac.uk/admissions/acs" target="_blank">M.Phil. in Advanced Computer Science</a>
+        Before I joined Bio, I graduated with an <a href="https://www.cst.cam.ac.uk/admissions/acs" target="_blank">M.Phil. in Advanced Computer Science</a>
         from the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>, UK.
         In my Master's thesis I used Machine Learning methods to detect and align chromosomes in microscope images,
         advised by <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank">Pietro Lió</a>.
