--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 
 <div class="col text-justify p-0">
     <p>
-        Before I joined Bio, I graduated with an <a href="https://www.cst.cam.ac.uk/admissions/acs" target="_blank">M.Phil. in Advanced Computer Science</a>
-        from the <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a>, UK.
-        In my Master's thesis I used Machine Learning methods to detect and align chromosomes in microscope images,
-        advised by <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank">Pietro Lió</a>.
+        Before I joined BioMotion Lab, I graduated with an B.Sc. in Electrical and Computer Engineering
+        from the <a href="https://ut.ac.ir/en" target="_blank">University Of Tehran</a>, Iran.
+        In my Undergrad's thesis I used Machine Learning methods to indetify Car Specifications such as model & colour during day/night and different weather.
+        Supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank"><b>Dr. Reshad Hoesseini</b></a>.
     </p>
 </div>
 
