--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         
         <p>
             I am also a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
-            My Master's research focused on developing Deep Learning models to generate novel face images from different views. My research also consists of Computer Vision/Graphic applications in Deep Learning. Previously I have done model/color recognition in my undergrad as my thesis project.
+            My Master's research focuses on developing Deep Learning models to generate novel face images from different views. My research also consists of Computer Vision/Graphic applications in Deep Learning. Previously I have done model/color recognition in my undergrad as my thesis project.
         </p>
     </div>
 </div>
@@ -136,7 +136,7 @@
         Before I joined BioMotion Lab, I graduated with an B.Sc. in Electrical and Computer Engineering
         from the <a href="https://ut.ac.ir/en" target="_blank">University Of Tehran</a>, Iran.
         In my Undergrad's thesis I used Machine Learning methods to indetify Car Specifications such as model & colour during day/night and different weather.
-        Supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank"><b>Dr. Reshad Hoesseini</b></a>.
+        During that time I was supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank"><b>Dr. Reshad Hoesseini</b></a>.
     </p>
 </div>
 
@@ -148,11 +148,11 @@
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Jun 14, 2021
+          Sep 14, 2021
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I recently joined Google as full-time research scientist.
+        <p>I recently joined BioMotion Lab as a Research Assistant.
 </p>
       </div>
     </div>
