--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         Before I joined BioMotion Lab, I graduated with an B.Sc. in Electrical and Computer Engineering
         from the <a href="https://ut.ac.ir/en" target="_blank">University Of Tehran</a>, Iran.
         In my Undergrad's thesis I used Machine Learning methods to indetify Car Specifications such as model & colour during day/night and different weather.
-        During that time I was supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank"><b>Dr. Reshad Hoesseini</b></a>.
+        During that time I was supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank">Dr. Reshad Hoesseini</a>.
     </p>
 </div>
 
@@ -152,7 +152,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I recently joined BioMotion Lab as a Research Assistant.
+        <p>I joined <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> as a Research Assistant.
 </p>
       </div>
     </div>
