--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Oct 5, 2020
+          July 22, 2021
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work on <a href="https://arxiv.org/pdf/2009.08424.pdf" target="https://arxiv.org/pdf/2009.08424.pdf">meaning representation in the brain</a> was accepted at NeurIPS 2020.
+        <p>I successfully defended my Bachelor of Science Thesis: <i>Obtaining Car Specifications in License Plate Tracking System</i>
 </p>
       </div>
     </div>
@@ -172,11 +172,11 @@
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Oct 1, 2019
+          Apr 1, 2021
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work on <a href="https://papers.nips.cc/paper/9076-graph-agreement-models-for-semi-supervised-learning" target="https://papers.nips.cc/paper/9076-graph-agreement-models-for-semi-supervised-learning">graph-agreement models for semi-supervised learning</a> was accepted at NeurIPS 2019.
+        <p> I got accepted to EECS at York University 
 </p>
       </div>
     </div>
@@ -193,7 +193,7 @@
       </div>
     </div>
   
-    <div class="row p-0">
+  <!--  <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Mar 27, 2019
@@ -203,19 +203,8 @@
         <p>Our work on  <a href="https://arxiv.org/abs/1903.09848" target="https://arxiv.org/abs/1903.09848">curriculum learning for machine translation</a> was accepted for oral presentation at NAACL 2019.
 </p>
       </div>
-    </div>
+    </div> -->
   
-    <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Apr 27, 2018
-        </span>
-      </div>
-      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Thank you <a href="https://www.cs.cmu.edu/cmlh-cfp" target="https://www.cs.cmu.edu/cmlh-cfp">CMLH</a> for the <a href="https://www.cs.cmu.edu/cmlh-cfp/fellowships" target="https://www.cs.cmu.edu/cmlh-cfp/fellowships">fellowship in digital health</a> in support of our work on Parkinson’s disease.
-</p>
-      </div>
-    </div>
   
 </div>
 
