--- a/index.html
+++ b/index.html
@@ -176,22 +176,11 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p> I got accepted to EECS at York University 
+        <p> I got accepted to York University M.A.Sc program.
 </p>
       </div>
     </div>
   
-    <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Apr 5, 2019
-        </span>
-      </div>
-      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Organizing a workshop on <a href="https://www.amtl-workshop.org/home" target="https://www.amtl-workshop.org/home">Adaptive &amp; Multitask Learning</a> at ICML 2019.
-</p>
-      </div>
-    </div>
   
   <!--  <div class="row p-0">
       <div class="col-sm-2 p-0">
