--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
-          Apr 1, 2021
+          Apr 14, 2021
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p> I got accepted to York University M.A.Sc program.
+        <p> I got accepted to York University Masters of Applied Science program.
 </p>
       </div>
     </div>
