--- a/projects/index.html
+++ b/projects/index.html
@@ -94,7 +94,7 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Projects</h1>
+  <h1>Currently Page under construction(Projects)</h1>
   <h6>some of the projects I have worked on</h6>
 
 
