--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I successfully defended my Bachelor of Science Thesis: <i>Obtaining Car Specifications in License Plate Tracking System</i>
+        <p>I successfully defended my Bachelor of Science Thesis: <i>Obtaining Car Specifications in License Plate Tracking System</i>.
 </p>
       </div>
     </div>
