--- a/cv/index.html
+++ b/cv/index.html
@@ -880,7 +880,7 @@
 				<ul class="card-text font-weight-light list-group list-group-flush">
 				
 
-				<span class="card-text font-weight-light"><b>Note:</b> for further details on my research, please see the <a href="/projects/" target="_blank"><b>projects</b></a> page.</span>
+				<span class="card-text font-weight-light"><b>Note:</b> For my projects details, please see the <a href="/projects/" target="_blank"><b>projects</b></a> page.</span>
 
 				<!--
 					<li class="list-group-item">
