--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <p>
         Before I joined BioMotion Lab, I graduated with an B.Sc. in Electrical and Computer Engineering
         from the <a href="https://ut.ac.ir/en" target="_blank">University Of Tehran</a>, Iran.
-        In my Undergrad's thesis I used Machine Learning methods to indetify Car Specifications such as model & colour during day/night and different weather.
+        In my undergrad thesis I used Machine Learning methods to identify Car Specifications such as model & colour during day/night and different weather.
         During that time I was supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank">Dr. Reshad Hoesseini</a>.
     </p>
 </div>
