--- a/projects/index.html
+++ b/projects/index.html
@@ -95,7 +95,7 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Projects</h1>
+  <h1>Projects (This Page is still under construction)</h1>
   <!--
   <h6>some of the projects I have worked on</h6>
   -->
