--- a/cv/index.html
+++ b/cv/index.html
@@ -465,19 +465,19 @@
 												
 											</li>
 										    <li>	
-													<span class="item">Performed with the natural language processing research team to develop and implement a speech-to-text model (Persian Langauge) for understanding users' commands.</span>						
+													<span class="item">Collaborated with the natural language processing research team to develop and implement a speech-to-text model (Persian Langauge) for understanding users' commands.</span>						
 											</li>
 												<li>	
-													<span class="item">Extracting features from Audio signals using MFCC and MEL spectrogram (Librosa library).</span>						
+													<span class="item">Extracting features from audio signals using MFCC and MEL spectrogram (Librosa library).</span>						
 											</li>
 												<li>	
-													<span class="item">Creating a word Library by cleaning and extracting words from approximately 5GB of newspaper text.</span>						
+													<span class="item">Creating a word library by cleaning and extracting words from approximately 5GB of newspaper text.</span>						
 											</li>
 												<li>	
 													<span class="item">Preprocessed the data using Python libraries such as Librosa, Photomizer, and Pandas.</span>						
 											</li>
 												<li>	
-													<span class="item">Implemented Neural Networks using frameworks such as Pytorch and Keras.</span>						
+													<span class="item">Implemented neural networks using frameworks such as Pytorch and Keras.</span>						
 											</li>
 												<li>	
 													<span class="item">Executed the model as an End-End network using the DeepSpeech framework.</span>						
@@ -515,13 +515,10 @@
 													<span class="item">Developing an application for controlling robots based on commands from a phone. </span>						
 											</li>
 												<li>	
-													<span class="item">Programming IR-sensor for detecting and measuring the Robots movement.</span>						
+													<span class="item">Programming IR-sensor for detecting and measuring the robots movement.</span>						
 											</li>
 												<li>	
 													<span class="item">Improved the position accuracy by using IR sensors instead of motor encoders.</span>						
-											</li>
-												<li>	
-													<span class="item">Designed an Android User Interface for controlling the robot.</span>						
 											</li>
 										
 									</ul>
