--- a/cv/index.html
+++ b/cv/index.html
@@ -369,7 +369,7 @@
 							
 								<div class="col-xs-2 cl-sm-2 col-md-auto text-left" style="width: 110px;">
 									<span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" style="width: 110px;">
-										2021 - now
+										SEP 2021 - now
 									</span>
 								</div>
 							
