--- a/projects/index.html
+++ b/projects/index.html
@@ -165,7 +165,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
+          <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">Anomaly Detection</h5>
             <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
