--- a/projects/index.html
+++ b/projects/index.html
@@ -168,7 +168,7 @@
           <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">Anomaly Detection</h5>
-            <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
+            <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
