--- a/teaching/index.html
+++ b/teaching/index.html
@@ -94,17 +94,17 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Currently Page under construction(teaching)</h1>
-  <h6>classes, workshops, and teaching material</h6>
+  <h1>Teaching</h1>
+  
 
 
-<h3 class="mt-4">Carnegie Mellon University</h3>
+<h3 class="mt-4">York University</h3>
 
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
       <div class="col-sm-10">
-        <h5 class="font-weight-bold">Introduction to Machine Learning</h5>
+        <h5 class="font-weight-bold">Data Structure </h5>
       </div>
       <div class="col-sm-2 text-left text-sm-right">
         <span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" href="https://www.cs.cmu.edu/~pradeepr/courses/701/2018-spring/" target="_blank">
@@ -112,6 +112,9 @@
         </span>
       </div>
     </div>
+    <h6 class="font-italic mt-2 mt-sm-0">Spring 2018: Teaching Assistant</h6>
+    <h6 class="font-italic mt-2 mt-sm-0">Spring 2018: Teaching Assistant</h6>
+    <h6 class="font-italic mt-2 mt-sm-0">Spring 2018: Teaching Assistant</h6>
     <h6 class="font-italic mt-2 mt-sm-0">Spring 2018: Teaching Assistant</h6>
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Graduate-level introduction to machine learning course for masters and PhD students, taught by <a href="https://www.cs.cmu.edu/~pradeepr/" target="_blank">Prof. Pradeep Ravikumar</a> and  <a href="https://www.cs.cmu.edu/~mmv/" target="_blank">Prof. Manuela Veloso</a>.</li>
@@ -143,7 +146,7 @@
   </div>
 </div>
 
-<h3 class="mt-4">Politehnica University of Timisoara</h3>
+<h3 class="mt-4">University of Tehran</h3>
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
