--- a/teaching/index.html
+++ b/teaching/index.html
@@ -177,13 +177,13 @@
   <div class="p-3">
     <div class="row">
       <div class="col-sm-10">
-        <h5 class="font-weight-bold">Competitive Programming Seminar</h5>
+        <h5 class="font-weight-bold">Machine Learning and Pattern Recognition</h5>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2013, Spring 2014: Lecturer and course co-organizer</h6>
+    <h6 class="font-italic mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
     <ul class="card-text font-weight-light list-group list-group-flush">
-      <li class="list-group-item">○ I co-organized a <a href="https://www.meetup.com/Cerc-algoritmica-TM" target="_blank">competitive programming seminar</a> for university and high-school students interested to train for algorithmic competitions (e.g. ACM-ICPC, informatics olympiad).</li>
-      <li class="list-group-item">○ I taught algorithms and data structures used in competitive programming, designed and solved practice problems and internal competitions.</li>
+      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
+      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
     </ul>
   </div>
 </div>
