--- a/teaching/index.html
+++ b/teaching/index.html
@@ -188,6 +188,24 @@
   </div>
 </div>
 
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Intelligent Systems</h5>
+      </div>
+    </div>
+    <h6 class="font-italic mt-2 mt-sm-0">Fall 2020: Head Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Fall 2019: Head Teaching Assistant</h6>
+    <ul class="card-text font-weight-light list-group list-group-flush">
+      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
+      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
+    </ul>
+  </div>
+</div>
+
+
+
 
   </div>
 
