--- a/teaching/index.html
+++ b/teaching/index.html
@@ -112,9 +112,9 @@
         </span>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2022: Teaching Assistant</h6>
-    <h6 class="font-italic mt-2 mt-sm-0">Winter 2022: Teaching Assistant</h6>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2021: Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Fall 2022: Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Winter 2022: Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Fall 2021: Teaching Assistant</h6>
     <!--
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Graduate-level introduction to machine learning course for masters and PhD students, taught by <a href="https://www.cs.cmu.edu/~pradeepr/" target="_blank">Prof. Pradeep Ravikumar</a> and  <a href="https://www.cs.cmu.edu/~mmv/" target="_blank">Prof. Manuela Veloso</a>.</li>
@@ -138,7 +138,7 @@
         </span>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2022: Teaching Assistant</h6>
+    <h6 class=" mt-2 mt-sm-0">Fall 2022: Teaching Assistant, Lab Instructor</h6>
     <!--
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Graduate level introduction to machine learning class for masters and PhD students taught by  <a href="https://www.cs.cmu.edu/~rsalakhu/" target="_blank">Prof. Ruslan Salakhutdinov</a>.</li>
@@ -161,7 +161,7 @@
         </span>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2021: Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Fall 2021: Teaching Assistant</h6>
     <!--
     <ul class="card-text font-weight-light list-group list-group-flush">
       <li class="list-group-item">○ Graduate level introduction to machine learning class for masters and PhD students taught by  <a href="https://www.cs.cmu.edu/~rsalakhu/" target="_blank">Prof. Ruslan Salakhutdinov</a>.</li>
@@ -180,11 +180,7 @@
         <h5 class="font-weight-bold">Machine Learning and Pattern Recognition</h5>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
-    <ul class="card-text font-weight-light list-group list-group-flush">
-      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
-      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
-    </ul>
+    <h6 class="mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
   </div>
 </div>
 
@@ -195,12 +191,8 @@
         <h5 class="font-weight-bold">Intelligent Systems</h5>
       </div>
     </div>
-    <h6 class="font-italic mt-2 mt-sm-0">Fall 2020: Head Teaching Assistant</h6>
+    <h6 class="mt-2 mt-sm-0">Fall 2020: Head Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
-    <ul class="card-text font-weight-light list-group list-group-flush">
-      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
-      <li class="list-group-item">Fall 2019: Teaching Assistant</li>
-    </ul>
   </div>
 </div>
 
