--- a/teaching/index.html
+++ b/teaching/index.html
@@ -214,6 +214,27 @@
   </div>
 </div>
 
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold"> Linear Algebra</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Spring 2020: Teaching Assistant</h6>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Engineering Probability and Statistics</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
+  </div>
+</div>
 
 
 
