--- a/teaching/index.html
+++ b/teaching/index.html
@@ -108,7 +108,7 @@
       </div>
       <div class="col-sm-2 text-left text-sm-right">
         <span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" href="https://www.cs.cmu.edu/~pradeepr/courses/701/2018-spring/" target="_blank">
-            10-701
+            Fall 2022:
         </span>
       </div>
     </div>
