--- a/projects/index.html
+++ b/projects/index.html
@@ -109,8 +109,9 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">LiveX Learning Platform</h5>
-            <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
+            <h5 class="card-title">Accuracy/Precision measurment pip-line</h5>
+            <p class="card-text">Designed a pipeline calculating the accuracy and precision of 3D sensors using Motion Capture technology.Created a data visualization framework to represent accuracy and precision as volumetric representations.
+</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
