--- a/teaching/index.html
+++ b/teaching/index.html
@@ -212,6 +212,40 @@
   <div class="p-3">
     <div class="row">
       <div class="col-sm-10">
+        <h5 class="font-weight-bold"> Operational Research</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Fall 2020: Teaching Assistant</h6>
+  </div>
+</div>
+
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold"> Discrete Mathematics</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Spring 2020: Teaching Assistant</h6>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold"> Fundamentals of Mechatronics Engineering</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Spring 2020: Teaching Assistant</h6>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
         <h5 class="font-weight-bold"> Linear Algebra</h5>
       </div>
     </div>
@@ -227,6 +261,28 @@
       </div>
     </div>
     <h6 class="mt-2 mt-sm-0">Fall 2019: Teaching Assistant</h6>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Electronics Laboratory 1</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Spring 2019: Teaching Assistant</h6>
+  </div>
+</div>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Introduction to Computing Systems and programming</h5>
+      </div>
+    </div>
+    <h6 class="mt-2 mt-sm-0">Fall 2018: Teaching Assistant</h6>
   </div>
 </div>
 
