--- a/projects/index.html
+++ b/projects/index.html
@@ -104,7 +104,7 @@
   
     <div class="project-card">  <!-- Citi Bike Project Page -->
       
-        <a href="/projects/Data Analytics/CitiBike/11">
+        <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
