--- a/projects/index.html
+++ b/projects/index.html
@@ -125,7 +125,7 @@
 
     <div class="project-card">  <!-- Project #2 -->
       
-        <a href="/projects/Data Analytics/CitiBike/11">
+        <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
