--- a/projects/index.html
+++ b/projects/index.html
@@ -107,7 +107,7 @@
         <a href="/projects/Data Analytics/CitiBike/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
+          <img class="card-img-top" src="/assets/img/Arkit_logo.jpg" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">Accuracy/Precision measurment pip-line</h5>
             <p class="card-text">Designed a pipeline calculating the accuracy and precision of 3D sensors using Motion Capture technology.Created a data visualization framework to represent accuracy and precision as volumetric representations.
