--- a/projects/index.html
+++ b/projects/index.html
@@ -131,7 +131,9 @@
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">CitiBike</h5>
-            <p class="card-text">Educational platform, providing interactive and cost-efficient educational science experiments by using IQubes, off-the-shelf devices and the cloud.</p>
+            <p class="card-text".>This analysis aims to break down the ridership demographics, to show which stations are more heavily used and why, and to give an overview of bike use.
+
+</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
@@ -163,7 +165,7 @@
 
     <div class="project-card">  <!-- Project #4 -->
       
-        <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/11">
+        <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html">
       
         <div class="card">
           <img class="card-img-top" src="/assets/img/Anomaly.JPG" alt="project thumbnail" />
