--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Amin Fadaeinejad | LiveX Learning Platform</title>
+  <title>Amin Fadaeinejad | Anomaly Detection using Auto encoder</title>
   <meta name="description" content="This is the personal website of Otilia Stretcu">
 
   <!-- Fonts and Icons -->
@@ -97,8 +97,13 @@
 
 <p><br /></p>
 
-<p>Tutoring system for kindergarten and school children based on a software platform that runs in the cloud, Windows Phone 7 devices and a set of electronic learning cubes called <b>IQubes</b> (our hardware invention) as part of team IQube that competed in the world finals of the Microsoft Imagine Cup competition.
-Our project won the Imagine Cup Romanian National Finals in 2012, and was ranked among the top 20 in the World Finals in Sydney, Australia.</p>
+<p> In data science, anamaly detection is when the system tries to detect a rare item, event or observation which deviate significantly from the original distribution and can not be defined as a normal behaviour. Three different categories of anomaly detection exists</p>
+
+<ul>
+  <li>Supervised anomaly detection</li>
+  <li>Semi-supervised anomaly detection</li>
+  <li>Unsupervised anomaly detection</li>
+</ul>
 
 <p><br /></p>
 
