--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -110,6 +110,84 @@
 
 <p><br /></p>
 
+
+
+
+
+
+<h2 id="overview">Usage Trend</h2>
+
+<p><br /></p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+
+<p><br /></p>
+
+
+<h2 id="overview">Stations’ Location Trends</h2>
+
+<p><br /></p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+
+<p><br /></p>
+
+
+
+
+<h2 id="overview">Effect of Pandemic</h2>
+
+<p><br /></p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+
+<p><br /></p>
+
+<h2 id="overview">Commonly Used Locations</h2>
+
+<p><br /></p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+
+<p><br /></p>
+
+
+<h2 id="overview">Proposed Expansion Policy</h2>
+
+<p><br /></p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+
+<p><br /></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h2 id="iqube">IQube</h2>
 
 <table>
