--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+
 <html>
 <head>
+<style>
+h3 {text-align: center;}
+</style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,7 +25,7 @@
   <nav id="navbar" class="navbar fixed-top navbar-expand-md grey lighten-5 z-depth-1 navbar-light">
     <div class="container-fluid p-0">
       
-        <a class="navbar-brand title font-weight-lighter" href="/"><span class="font-weight-bold">Otilia</span> Stretcu</a>
+        <a class="navbar-brand title font-weight-lighter" href="/"><span class="font-weight-bold">Amin</span> Fadaeinejad</a>
       
       <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -105,8 +109,8 @@
 <h2 id="overview">overview</h2>
 
 <p><br /></p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+<h3><iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+</h3>
 
 <p><br /></p>
 
