--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -107,6 +107,13 @@
 
 <p><br /></p>
 
+<p> In data science, anamaly detection is when the system tries to detect a rare item, event or observation which deviate significantly from the original distribution and can not be defined as a normal behaviour. Three different categories of anomaly detection exists</p>
+
+<h2 id="overview">Background</h2>
+
+<p>Anomaly detection is also known as out-layer analysis is a step-in data mining that identifies data points, events, and observations that deviate from a data set’s normal behaviour. Anomalies our out-layers are data points within the data sets that appear to deviate markedly from expected outputs. It is the process of finding patterns in data that do not conform to prior expected behaviour. Anomaly detection is being employed more increasingly in the presence of big data that is captured by sensors, social media platforms, huge networks, etc. They also have many applications including energy systems, medical devices, banking network intrusion detection, etc. Machine learning is progressively being used to automate anomaly detection. </p>
+
+
 <h2 id="overview">Project Video</h2>
 
 <p><br /></p>
