--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -118,7 +118,18 @@
 
 <h3 id="overview"> Anomaly Detection</h3>
 
-<p>Anomaly detection is also known as out-layer analysis is a step-in data mining that identifies data points, events, and observations that deviate from a data set’s normal behaviour. Anomalies our out-layers are data points within the data sets that appear to deviate markedly from expected outputs. It is the process of finding patterns in data that do not conform to prior expected behaviour. Anomaly detection is being employed more increasingly in the presence of big data that is captured by sensors, social media platforms, huge networks, etc. They also have many applications including energy systems, medical devices, banking network intrusion detection, etc. Machine learning is progressively being used to automate anomaly detection. </p>
+<p>Auto Encoder is a generative unsupervised deep learning
+algorithm used for reconstructing high-dimensional input
+data using a neural network with a narrow bottleneck layer in
+the middle that contains the latent representation of the input
+data. Auto-Encoders have two main parts called, Encoder
+and Decoder. </p>
+
+<ul>
+  <li>Encoder: Accepts high-dimensional input data and translates it to latent low-dimensional data. The input size to an Encoder network is larger than its output size </li>
+  <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size</li>
+</ul>
+
 
 
 
