--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -130,7 +130,18 @@ and Decoder. </p>
   <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size</li>
 </ul>
 
+<h3 id="overview">  Accuracy methods </h3>
 
+<p>In order to be able to compare our result with the results that
+are already published be need to have a standard accuracy
+method. First off we need to know the concept of True and
+Predicted conditions. Two types of correct predictions (True
+Positives and True Negatives), and there are two types of
+errors. Error Type I for any observation predicted positive
+when actually it is negative (False Positive, also called False
+Alert). Error Type II for any observation predicted negative
+when actually it is positive (False Negative).
+ </p>
 
 
 <h2 id="overview">Project Video</h2>
