--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -109,7 +109,7 @@
 
 <p> In data science, anamaly detection is when the system tries to detect a rare item, event or observation which deviate significantly from the original distribution and can not be defined as a normal behaviour. Three different categories of anomaly detection exists</p>
 
-<h2 id="overview">Background</h2>
+<h2 id="overview">1. Background</h2>
 
 <h3 id="overview">1.1  Anomaly Detection</h3>
 
@@ -130,7 +130,7 @@ and Decoder. </p>
   <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size</li>
 </ul>
 
-<h3 id="overview">  Accuracy methods </h3>
+<h3 id="overview">1.3 Accuracy methods </h3>
 
 <p>In order to be able to compare our result with the results that
 are already published be need to have a standard accuracy
@@ -142,6 +142,13 @@ when actually it is negative (False Positive, also called False
 Alert). Error Type II for any observation predicted negative
 when actually it is positive (False Negative).
  </p>
+
+
+<h2 id="overview">1. Background</h2>
+
+<td><img src="/assets/img/True Positive.ppm" alt="iqubes" width="400px" height="200px" /></td>
+
+
 
 
 <h2 id="overview">Project Video</h2>
