--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -151,6 +151,25 @@ when actually it is positive (False Negative).
 
 
 
+
+
+
+<h2 id="more-information"> Conclusions</h2>
+
+<table style="width:100%">
+  <tr>
+    <td>Emil</td>
+    <td>Tobias</td>
+    <td>Linus</td>
+  </tr>
+  <tr>
+    <td>16</td>
+    <td>14</td>
+    <td>10</td>
+  </tr>
+</table>
+
+
 <h2 id="overview">Project Video</h2>
 
 <p><br /></p>
