--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -146,7 +146,7 @@ when actually it is positive (False Negative).
 
 <h2 id="overview">1. Background</h2>
 
-<td><img src="/assets/img/True Positive.ppm" alt="iqubes" width="400px" height="200px" /></td>
+<td><img src="/assets/img/True Positive.ppm" alt="iqubes" class="center" width="400px" height="200px" /></td>
 
 
 
