--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -158,14 +158,16 @@ when actually it is positive (False Negative).
 
 <table style="width:100%">
   <tr>
-    <td>Emil</td>
-    <td>Tobias</td>
-    <td>Linus</td>
+    <td>METHODS</td>
+    <td>RECALL</td>
+    <td>PRECISION</td>
+    <td>F1</td>
   </tr>
   <tr>
     <td>16</td>
     <td>14</td>
     <td>10</td>
+    <td>Linus</td>
   </tr>
 </table>
 
