--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -164,10 +164,40 @@ when actually it is positive (False Negative).
     <td>F1</td>
   </tr>
   <tr>
-    <td>16</td>
-    <td>14</td>
-    <td>10</td>
-    <td>Linus</td>
+    <td>OUR METHOD (PRINT)</td>
+    <td>0.22</td>
+    <td>0.82</td>
+    <td>0.35</td>
+  </tr>
+  <tr>
+    <td>OUR METHOD (CRACK)</td>
+    <td>0.26</td>
+    <td>0.57</td>
+    <td>0.36</td>
+  </tr>
+  <tr>
+    <td>OUR METHOD (CUT)</td>
+    <td>0.69</td>
+    <td>0.8</td>
+    <td>0.57</td>
+  </tr>
+  <tr>
+    <td>OUR METHOD (HOLE)</td>
+    <td>0.55</td>
+    <td>0.61</td>
+    <td>0.75</td>
+  </tr>
+  <tr>
+    <td>AE(SSIM)</td>
+    <td>0.08</td>
+    <td>1</td>
+    <td>0.15</td>
+  </tr>
+  <tr>
+    <td>AE(L2)</td>
+    <td>0.69</td>
+    <td>0.8</td>
+    <td>0.57</td>
   </tr>
 </table>
 
