--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -15,6 +15,14 @@
   <link rel="stylesheet" href="/assets/css/academicons.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="canonical" href="/projects/2_livex/">
+
+
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+  
 </head>
 <body>
   <!-- Header -->
@@ -195,10 +203,23 @@ when actually it is positive (False Negative).
   </tr>
   <tr>
     <td>AE(L2)</td>
-    <td>0.69</td>
-    <td>0.8</td>
-    <td>0.57</td>
+    <td>0.84</td>
+    <td>0.93</td>
+    <td>0.88</td>
   </tr>
+  <tr>
+    <td>ANOGAN</td>
+    <td>0.16</td>
+    <td>0.83</td>
+    <td>0.27</td>
+  </tr>
+  <tr>
+    <td>CNN FEATURE DICTIONARY</td>
+    <td>0.07</td>
+    <td>0.9</td>
+    <td>0.13</td>
+  </tr>
+  
 </table>
 
 
