--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -22,7 +22,7 @@ table, th, td {
   border: 1px solid black;
 }
 </style>
-  
+
 </head>
 <body>
   <!-- Header -->
@@ -198,14 +198,14 @@ when actually it is positive (False Negative).
   <tr>
     <td>AE(SSIM)</td>
     <td>0.08</td>
-    <td>1</td>
+    <td><strong>1</strong></td>
     <td>0.15</td>
   </tr>
   <tr>
-    <td>AE(L2)</td>
+    <td><strong>AE(L2)</strong></td>
     <td>0.84</td>
     <td>0.93</td>
-    <td>0.88</td>
+    <td><strong>0.88</strong></td>
   </tr>
   <tr>
     <td>ANOGAN</td>
