--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -155,7 +155,7 @@ when actually it is positive (False Negative).
 <td><img src="/assets/img/True Positive.ppm" alt="iqubes" width="400px" height="200px" /></td>
 
 
-<h2 id="overview"> Dataset</h2>
+<h2 id="overview">2.  Dataset</h2>
 
 <p>For our project, we used the MVTec data-set that belonged
 to <a href="https://www.semanticscholar.org/paper/The-MVTec-Anomaly-Detection-Dataset%3A-A-Real-World-Bergmann-Batzner/48f9a48aa5b1230b05a443d2d531e6441a541686">Paul Bergmann, January
@@ -173,6 +173,11 @@ end, we had approximately 2000 images. There are 70 test
 images which different types such as crack, cut, hole and
 print. The data-set also includes ground Truth to calculate
 the accuracy of the testing.</p>
+
+<h2 id="overview">2.  Network Architect</h2>
+
+Our model had two main parts the Encoder and the Decorder. Each one had several convolutional layers followed by Batch-Normalization with 0.1 momentum and ϵ = 10−6
+. For the activation function we used the LeakyReLU with negative slop 0.01.
 
 
 
