--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -105,7 +105,7 @@ table, th, td {
 
 <p><br /></p>
 
-<p> In data science, anamaly detection is when the system tries to detect a rare item, event or observation which deviate significantly from the original distribution and can not be defined as a normal behaviour. Three different categories of anomaly detection exists</p>
+<p> In data science, anomaly detection is when the system tries to detect a rare item, event or observation which deviates significantly from the original distribution and can not be defined as normal behaviour. Three different categories of anomaly detection exist:</p>
 
 <ul>
   <li>Supervised anomaly detection</li>
@@ -115,40 +115,32 @@ table, th, td {
 
 <p><br /></p>
 
-<p> In data science, anamaly detection is when the system tries to detect a rare item, event or observation which deviate significantly from the original distribution and can not be defined as a normal behaviour. Three different categories of anomaly detection exists</p>
+<p> In this project, we will be using an unsupervised approach to detect the regions of the hazelnut images that do not match the distribution.</p>
 
 <h2 id="overview">1. Background</h2>
 
 <h3 id="overview">1.1  Anomaly Detection</h3>
 
-<p>Anomaly detection is also known as out-layer analysis is a step-in data mining that identifies data points, events, and observations that deviate from a data set’s normal behaviour. Anomalies our out-layers are data points within the data sets that appear to deviate markedly from expected outputs. It is the process of finding patterns in data that do not conform to prior expected behaviour. Anomaly detection is being employed more increasingly in the presence of big data that is captured by sensors, social media platforms, huge networks, etc. They also have many applications including energy systems, medical devices, banking network intrusion detection, etc. Machine learning is progressively being used to automate anomaly detection. </p>
+<p>Anomaly detection, also known as out-layer analysis, is a step-in data mining that identifies data points, events, and observations that deviate from a data set’s normal behaviour. It is the process of finding patterns in data that do not conform to prior expected behaviour. Anomaly detection is being employed increasingly in the presence of big data that is captured by sensors, social media platforms, huge networks, etc. They also have many applications, including energy systems, medical devices, banking network intrusion detection, etc. Machine learning is progressively being used to automate anomaly detection.</p>
 
 
 <h3 id="overview"> 1.2. Auto-Encoders</h3>
 
 <p>Auto Encoder is a generative unsupervised deep learning
-algorithm used for reconstructing high-dimensional input
+the algorithm used for reconstructing high-dimensional input
 data using a neural network with a narrow bottleneck layer in
 the middle that contains the latent representation of the input
 data. Auto-Encoders have two main parts called, Encoder
 and Decoder. </p>
 
 <ul>
-  <li>Encoder: Accepts high-dimensional input data and translates it to latent low-dimensional data. The input size to an Encoder network is larger than its output size </li>
-  <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size</li>
+  <li>Encoder: Accepts high-dimensional input data and translates it to latent low-dimensional data. The input size of an Encoder network is larger than its output size.</li>
+  <li>Decoder: The Decoder network receives the input from the Encoder coder’s output. The Decoder’s objective is to reconstruct the input data. The output size of a Decoder network is larger than its input size.</li>
 </ul>
 
 <h3 id="overview">1.3 Accuracy methods </h3>
 
-<p>In order to be able to compare our result with the results that
-are already published be need to have a standard accuracy
-method. First off we need to know the concept of True and
-Predicted conditions. Two types of correct predictions (True
-Positives and True Negatives), and there are two types of
-errors. Error Type I for any observation predicted positive
-when actually it is negative (False Positive, also called False
-Alert). Error Type II for any observation predicted negative
-when actually it is positive (False Negative).
+<p>In order to be able to compare our results with those already published, we need to have a standard accuracy method. First off, we need to know the concept of True and Predicted conditions. Two types of correct predictions (True Positives and True Negatives), and there are two types of errors. Error Type I for any observation predicted positive when it is negative (False Positive, also called False Alert). Error Type II for any observation predicted negative when it is positive (False Negative).
  </p>
 
 
