--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -159,6 +159,9 @@ images which different types, such as crack, cut, hole and
 print. The dataset also includes ground Truth to calculate
 the accuracy of the testing.</p>
 
+<td><img src="/assets/img/Good_Data.JPG" alt="iqubes" width="400px" height="200px" /></td>
+
+
 <h2 id="overview">2.  Network Architect</h2>
 
 Our model had two main parts the Encoder and the Decoder. Each one had several convolutional layers followed by Batch-Normalization with 0.1 momentum and ϵ = 10−6
