--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -159,8 +159,10 @@ images which different types, such as crack, cut, hole and
 print. The dataset also includes ground Truth to calculate
 the accuracy of the testing.</p>
 
-<td><img src="/assets/img/Good_Data.JPG" alt="iqubes" width="400px" height="200px" /></td>
+<td><img src="/assets/img/Good_Data.JPG" alt="Train Images" width="400px" height="200px" /></td>
 
+
+<img src="/assets/img/Def_Data.JPG" alt="Train Images" width="400px" height="200px" />
 
 <h2 id="overview">2.  Network Architect</h2>
 
