--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -164,6 +164,8 @@ the accuracy of the testing.</p>
 
 <img src="/assets/img/Def_Data.JPG" alt="Train Images" width="400px" height="200px" />
 
+<p style="text-align:center;"><img src="/assets/img/Def_Data.JPG" alt="Logo"></p>
+
 <h2 id="overview">2.  Network Architect</h2>
 
 Our model had two main parts the Encoder and the Decoder. Each one had several convolutional layers followed by Batch-Normalization with 0.1 momentum and ϵ = 10−6
